--- a/food-oracle/package.json
+++ b/food-oracle/package.json
@@ -12,6 +12,7 @@
     "electron": "^29.1.3"
   },
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "mongoose": "^8.2.3"
   }
 }
